Aligned history tab and fixed remove button placement

--- a/client/css/styles.css
+++ b/client/css/styles.css
@@ -18,8 +18,10 @@ body {
 }
 
 header {
+  margin-top: 50px;
   color: white;
   background-color: #22242A;
+  border-radius: 5px 5px 0 0;
 }
 
 #default-playlist-message {
@@ -577,10 +579,11 @@ div#log-container {
 
 div.log {
   display: inline-block;
+  float: left;
   height: 250px;
   overflow-x: hidden;
-  width:640px;
-  padding-bottom: 10px;
+  width:600px;
+  padding: 20px;
   background-color: rgba(249, 249, 249, 1);
   opacity: 0.85;
   background-image: url("../img/chat-background.png");
@@ -590,9 +593,10 @@ div.log {
 
 div.history {
   display: inline-block;
-  height: 250px;
+  float: right;
+  height: 258px;
   overflow-x: hidden;
-  width: 410px;
+  width: 418px;
   border: 1px solid black;
   background-color: #22242A;
 }
